--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
       - name: Run unit tests
-        run: make tests
+        run: make test
       - name: Build Codecov report
         uses: codecov/codecov-action@v1
         with:
