--- a/bundle/next-all-namespaces/eclipse-che-preview-openshift/metadata/annotations.yaml
+++ b/bundle/next-all-namespaces/eclipse-che-preview-openshift/metadata/annotations.yaml
@@ -16,8 +16,8 @@ annotations:
   operators.operatorframework.io.bundle.manifests.v1: manifests/
   operators.operatorframework.io.bundle.metadata.v1: metadata/
   operators.operatorframework.io.bundle.package.v1: eclipse-che-preview-openshift
-  operators.operatorframework.io.bundle.channels.v1: stable
-  operators.operatorframework.io.bundle.channel.default.v1: stable
+  operators.operatorframework.io.bundle.channels.v1: next-all-namespaces
+  operators.operatorframework.io.bundle.channel.default.v1: next-all-namespaces
   operators.operatorframework.io.metrics.builder: operator-sdk-v1.6.1+git
   operators.operatorframework.io.metrics.mediatype.v1: metrics+v1
   operators.operatorframework.io.metrics.project_layout: go.kubebuilder.io/v3
@@ -25,3 +25,5 @@ annotations:
   # Annotations for testing.
   operators.operatorframework.io.test.mediatype.v1: scorecard+v1
   operators.operatorframework.io.test.config.v1: tests/scorecard/
+
+  com.redhat.openshift.versions: "v4.8"
