chore: Update Dev Workspace templates to v0.11.0 (not in 7.42.0)
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -956,13 +956,6 @@ spec:
                 - list
                 - watch
             - apiGroups:
-                - authorization.k8s.io
-              resources:
-                - localsubjectaccessreviews
-                - subjectaccessreviews
-              verbs:
-                - create
-            - apiGroups:
                 - batch
               resources:
                 - jobs
@@ -974,14 +967,6 @@ spec:
                 - patch
                 - update
                 - watch
-            - apiGroups:
-                - config.openshift.io
-              resourceNames:
-                - cluster
-              resources:
-                - proxies
-              verbs:
-                - get
             - apiGroups:
                 - controller.devfile.io
               resources:
@@ -1010,14 +995,6 @@ spec:
                 - create
                 - get
                 - update
-            - apiGroups:
-                - metrics.k8s.io
-              resources:
-                - pods
-              verbs:
-                - get
-                - list
-                - watch
             - apiGroups:
                 - monitoring.coreos.com
               resources:
@@ -1075,24 +1052,10 @@ spec:
                 - '*'
               verbs:
                 - '*'
-            - apiGroups:
-                - workspace.devfile.io
-              resources:
-                - devworkspaces
-                - devworkspacetemplates
+            - nonResourceURLs:
+                - /metrics
               verbs:
                 - get
-                - list
-                - watch
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings
-                - components
-              verbs:
-                - get
-                - list
-                - watch
           serviceAccountName: che-operator
       deployments:
         - name: che-operator
@@ -1158,7 +1121,7 @@ spec:
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
                         value: quay.io/che-incubator/configbump:0.1.4
                       - name: RELATED_IMAGE_devworkspace_controller
-                        value: quay.io/devfile/devworkspace-controller:v0.9.0
+                        value: quay.io/devfile/devworkspace-controller:v0.11.0
                       - name: RELATED_IMAGE_internal_rest_backup_server
                         value: quay.io/eclipse/che-backup-server-rest:b6cc165
                       - name: RELATED_IMAGE_gateway_authentication_sidecar
