--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -24,6 +24,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
+      - name: Set up Go 1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
       - name: Run unit tests
         run: make test
       - name: Build Codecov report
