--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
     - name: Checkout source code
       uses: actions/checkout@v2.3.1
+    - name: Set up Go 1.16
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16
     - name: Run unit tests
       run: make test
   image-build:
