--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -559,6 +559,13 @@ rules:
     - list
     - watch
   - apiGroups:
+    - authorization.k8s.io
+    resources:
+    - localsubjectaccessreviews
+    - subjectaccessreviews
+    verbs:
+    - create
+  - apiGroups:
     - batch
     resources:
     - jobs
@@ -570,6 +577,14 @@ rules:
     - patch
     - update
     - watch
+  - apiGroups:
+    - config.openshift.io
+    resourceNames:
+    - cluster
+    resources:
+    - proxies
+    verbs:
+    - get
   - apiGroups:
     - controller.devfile.io
     resources:
@@ -598,6 +613,14 @@ rules:
     - create
     - get
     - update
+  - apiGroups:
+    - metrics.k8s.io
+    resources:
+    - pods
+    verbs:
+    - get
+    - list
+    - watch
   - apiGroups:
     - monitoring.coreos.com
     resources:
