--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -34,6 +34,96 @@ entries:
               cheClusterRoles: ''
               cheWorkspaceClusterRole: ''
               gitSelfSignedCert: false
+              proxyURL: ''
+              proxyPort: ''
+              proxySecret: ''
+              nonProxyHosts: ''
+              workspaceNamespaceDefault: "<username>-che"
+            database:
+              externalDb: false
+              chePostgresHostName: ''
+              chePostgresPort: ''
+              chePostgresSecret: ''
+              chePostgresDb: ''
+            storage:
+              pvcStrategy: 'common'
+              pvcClaimSize: '10Gi'
+              preCreateSubPaths: true
+              postgresPVCStorageClassName: ''
+              workspacePVCStorageClassName: ''
+            auth:
+              identityProviderURL: ''
+              oAuthClientName: ''
+              oAuthSecret: ''
+            k8s:
+              ingressDomain: '192.168.99.101.nip.io'
+              ingressClass: ''
+              tlsSecretName: 'che-tls'
+              securityContextFsGroup: ''
+              securityContextRunAsUser: ''
+            metrics:
+              enable: true
+            devWorkspace:
+              enable: true
+      artifacthub.io/license: EPL-2.0
+      artifacthub.io/links: |
+        - name: repository
+          url: https://github.com/eclipse-che/che-operator
+        - name: web-site
+          url: https://www.eclipse.org/che/
+        - name: docs
+          url: https://www.eclipse.org/che/docs
+        - name: support
+          url: https://github.com/eclipse/che
+      artifacthub.io/maintainers: |
+        - name: Anatolii Bazko
+          email: abazko@redhat.com
+        - name: Oleksandr Andriienko
+          email: oandriie@redhat.com
+      artifacthub.io/operator: "true"
+      artifacthub.io/operatorCapabilities: Seamless Upgrades
+      artifacthub.io/provider: Eclipse Foundation
+    apiVersion: v1
+    created: "2022-02-03T12:37:30.983717106Z"
+    description: A Helm chart for deploying Eclipse Che on a Kubernetes
+    digest: 4ff3ef346985af1c8cfd4533a078661b1cac5fb391b61f0612bcf305406ca59b
+    name: eclipse-che
+    urls:
+    - https://eclipse-che.github.io/che-operator/charts/stable/eclipse-che-7.43.0.tgz
+    version: 7.43.0
+  - annotations:
+      artifacthub.io/crds: |-
+        - kind: CheCluster
+          version: v1
+          name: checlusters.org.eclipse.che
+          displayName: CheCluster
+          description: The `CheCluster` custom resource allows defining and managing a Che server installation"
+        - kind: CheBackupServerConfiguration
+          version: v1
+          name: chebackupserverconfigurations.org.eclipse.che
+          displayName: CheBackupServerConfiguration
+          description: The `CheBackupServerConfiguration` custom resource allows defining and managing Eclipse Che Backup Server Configurations
+        - kind: CheClusterRestore
+          version: v1
+          name: checlusterrestores.org.eclipse.che
+          displayName: CheClusterRestore
+          description: The `CheClusterRestore` custom resource allows defining and managing Eclipse Che restore
+        - kind: CheClusterBackup
+          version: v1
+          name: checlusterbackups.org.eclipse.che
+          displayName: CheClusterBackup
+          description: The `CheClusterBackup` custom resource allows defining and managing Eclipse Che backup
+      artifacthub.io/crdsExamples: |
+        - apiVersion: org.eclipse.che/v1
+          kind: CheCluster
+          metadata:
+            name: eclipse-che
+            namespace: eclipse-che
+          spec:
+            server:
+              cheClusterRoles: ''
+              cheWorkspaceClusterRole: ''
+              gitSelfSignedCert: false
               tlsSupport: true
               proxyURL: ''
               proxyPort: ''
@@ -113,7 +203,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.94427208Z"
+    created: "2022-02-03T12:37:30.982486285Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: d542903c6fa5ee2737c0c6de31b28f8061792186eff26cbfd45fb6b804600316
     name: eclipse-che
@@ -248,7 +338,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.942844467Z"
+    created: "2022-02-03T12:37:30.981261464Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: bef03cff9f0d9a1c4e8695af9f89bace7483b940b19085c5609387b7e9bf36a8
     name: eclipse-che
@@ -383,7 +473,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.941394953Z"
+    created: "2022-02-03T12:37:30.979805238Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: ebb32faf3df08bcb1c0220494b9ff2965b22bbe120afa995e426248cebe96f50
     name: eclipse-che
@@ -518,7 +608,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.939907135Z"
+    created: "2022-02-03T12:37:30.977688801Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 91c3fee6a8a1985db1458ca8f69f1ce6d4a8c51d247119922c8f06238bd47238
     name: eclipse-che
@@ -653,7 +743,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.938674537Z"
+    created: "2022-02-03T12:37:30.976655983Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 485b22612ee63c30e8680fb2fb5e376762deb70487d470d6293c4abf477e5cf9
     name: eclipse-che
@@ -788,7 +878,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.936809189Z"
+    created: "2022-02-03T12:37:30.975449162Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 1e47c7db4e8b2056bf65c8cb14f6b1e398bd97f010cd6ccc2db58ea63d92c300
     name: eclipse-che
@@ -923,7 +1013,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.93404447Z"
+    created: "2022-02-03T12:37:30.97417554Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: a404541c568b784ab11f443eb47441807192477879c1be0f8e09d9a2534f9244
     name: eclipse-che
@@ -1058,11 +1148,11 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-01-13T21:38:49.932760269Z"
+    created: "2022-02-03T12:37:30.973106121Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: aa4efbd1168883302315f172124bc11f433131a01b70aaf772e08eec3e3d551b
     name: eclipse-che
     urls:
     - https://eclipse-che.github.io/che-operator/charts/stable/eclipse-che-7.39.2.tgz
     version: 7.39.2
-generated: "2022-01-13T21:38:49.931000729Z"
+generated: "2022-02-03T12:37:30.971756598Z"
