--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -75,7 +75,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.44.0-432.next
+  name: eclipse-che-preview-openshift.v7.45.0-433.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -128,6 +128,10 @@ spec:
             path: auth.gatewayHeaderRewriteSidecarImage
             x-descriptors:
               - urn:alm:descriptor:com.tectonic.ui:hidden
+          - description: Configuration settings related to the User Dashboard used
+              by the Che installation.
+            displayName: User Dashboard
+            path: dashboard
           - description: Configuration settings related to the database used by the
               Che installation.
             displayName: Database
@@ -968,7 +972,7 @@ spec:
                       - name: RELATED_IMAGE_devfile_registry
                         value: quay.io/eclipse/che-devfile-registry:next
                       - name: RELATED_IMAGE_pvc_jobs
-                        value: registry.access.redhat.com/ubi8-minimal:8.5-230
+                        value: registry.access.redhat.com/ubi8-minimal:8.5-230.1645809059
                       - name: RELATED_IMAGE_postgres
                         value: quay.io/eclipse/che--centos--postgresql-96-centos7:9.6-b681d78125361519180a6ac05242c296f8906c11eab7e207b5ca9a89b6344392
                       - name: RELATED_IMAGE_postgres_13_3
@@ -1282,4 +1286,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.44.0-432.next
+  version: 7.45.0-433.next
