--- a/bundle/stable/eclipse-che-preview-openshift/manifests/org_v1_che_crd.yaml
+++ b/bundle/stable/eclipse-che-preview-openshift/manifests/org_v1_che_crd.yaml
@@ -289,6 +289,15 @@ spec:
                         first login. Defaults to `false`.
                       type: boolean
                   type: object
+                dashboard:
+                  description: Configuration settings related to the User Dashboard
+                    used by the Che installation.
+                  properties:
+                    warning:
+                      description: Warning message that will be displayed on the User
+                        Dashboard
+                      type: string
+                  type: object
                 database:
                   description: Configuration settings related to the database used
                     by the Che installation.
@@ -350,7 +359,7 @@ spec:
                         one of following scenarios applies: 1. `chePostgresUser` and
                         `chePostgresPassword` are defined, then they will be used
                         to connect to the DB. 2. `chePostgresUser` or `chePostgresPassword`
-                        are not defined, then a new secret with the name `che-postgres-secret`
+                        are not defined, then a new secret with the name `postgres-credentials`
                         will be created with default value of `pgche` for `user` and
                         with an auto-generated value for `password`. The secret must
                         have `app.kubernetes.io/part-of=che.eclipse.org` label.'
@@ -405,6 +414,9 @@ spec:
                         installed. Fails when a non-matching version of the Operator
                         is already installed.
                       type: boolean
+                    runningLimit:
+                      description: Maximum number of the running workspaces per user.
+                      type: string
                   required:
                     - enable
                   type: object
