--- a/config/crd/bases/org_v1_che_crd.yaml
+++ b/config/crd/bases/org_v1_che_crd.yaml
@@ -563,9 +563,10 @@ spec:
                       type: string
                     cheFlavor:
                       description: Deprecated. The value of this flag is ignored.
-                        Specifies a variation of the installation. The options are
-                        `che` for upstream Che installations or `devspaces` for Red
-                        Hat OpenShift Dev Spaces (formerly Red Hat CodeReady Workspaces) installations.
+                        Specifies a variation of the installation. The options are  `che`
+                        for upstream Che installations or `devspaces` for Red Hat
+                        OpenShift Dev Spaces (formerly Red Hat CodeReady Workspaces)
+                        installation
                       type: string
                     cheHost:
                       description: Public host name of the installed Che server. When
