--- a/bundle/stable/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/stable/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -142,7 +142,7 @@ spec:
           - description: Deploys the DevWorkspace Operator in the cluster. Does nothing
               when a matching version of the Operator is already installed. Fails
               when a non-matching version of the Operator is already installed.
-            displayName: Enable DevWorkspace operator
+            displayName: Enable DevWorkspace operator (Technology Preview)
             path: devWorkspace.enable
             x-descriptors:
               - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
